<resources>
    <string name="app_name">Wingo</string>
    <string name="ak_login_protocol_scheme">ak411697102796944</string>

    <!--<string name="FACEBOOK_APP_ID">411697102796944</string>-->
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">d4ee9c79871dd847d4f95bfded61f048</string>
    <string name="fly_to_the_other_side_of_the_world">Fly to the other side of the world</string>
    <string name="sign_in_sign_up_with_mobile_phone">Sign in / Sign up with mobile phone</string>
    <string name="put_your_number">Put your number</string>
    <string name="next">Next</string>
    <string name="phone_is">Sign in with Phone Number</string>
    <string name="or">OR</string>
    <string name="login_means_you_agree_terms_of_use_n_u_broadcast_agreement_u_u_privacy_policy_u">Login means you agree Terms of use , \n  <u>Broadcast Agreement</u> &amp; <u>Privacy policy</u></string>
    <string name="powered_by">Powered by</string>
    <string name="create_password">Create Password</string>
    <string name="must_contain_at_least_one_lower_case_letter_one_upper_case_letter_one_digit_and_one_of_these_special_characters"><![CDATA[Must contain at least one lower case letter. one upper case letter,one digit , and one of these special characters ~!@#$%^&*()_+]]></string>
    <string name="re_create_password">Re-Create Password</string>
    <string name="sign_up">Sign up</string>
    <string name="strong">Strong ــــــ</string>
    <string name="enter_password">Enter Password</string>
    <string name="username">Username</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="home_address">Home Address</string>
    <string name="birth_date">Birth Date</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="done">Done</string>
    <string name="popular">Popular</string>
    <string name="nearby">Nearby</string>
    <string name="pk">PK</string>
    <string name="cancel">Cancel</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="discover_friends">Discover Friends</string>
    <string name="find_facebook_friends">Find Facebook Friends</string>
    <string name="find_contacts">Find Contacts</string>
    <string name="you_may_follow">You may follow</string>
    <string name="contributes">Contributes</string>

    <string name="wingo_elite_id">Wingo elite id</string>

    <string name="followers">Followers</string>

    <string name="language">Language</string>
    <string name="privacy">Privacy</string>
    <string name="block_list">Block List</string>
    <string name="connected_account">Connected Account</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="feedback">FeedBack</string>
    <string name="clear_cash">Clear cash</string>
    <string name="log_out">LOG OUT</string>
    <string name="can_t_access_this_phone_number">Can\'t access this phone number</string>
    <string name="facebook_app_id">411697102796944</string>
    <!--<string name="facebook_app_id">445454746303643</string>-->
    <string name="fb_login_protocol_scheme">fb445454746303643</string>
    <string name="required">This Field is Required</string>
    <string name="required_field">Required !</string>
    <string name="password_strength_weak">weak</string>
    <string name="password_strength_medium">medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="pass_dont_match">Passwords Don\'t Match</string>
    <string name="wings_balance">Wings Balance</string>
    <string name="convert_to_diamonds">Convert to Diamonds</string>
    <string name="what_are_wings">What are Wings ?</string>
    <string name="when_you_receive_gifts_from_your_viewers_during_your_stream_you_will_earn_the_same_amount_of_wings_as_the_diamonds_spent_to_purchase_the_gift">When you receive gifts from your viewers during your stream , you will earn the same amount of wings as the diamonds spent to purchase the gift</string>
    <string name="signin_signup_with_your_phone_number">Signin / Signup with your phone number</string>
    <string name="top_trending_broadcast">Top Trending broadcast</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="filter">Filter</string>
    <string name="live">Live</string>
    <string name="no_broadcasts_you_follow_are_live">No broadcasts you follow are live</string>
    <string name="both">Both</string>
    <string name="explore">Explore</string>
    <string name="countries_regions"><![CDATA[Countries & Regions]]></string>
    <string name="hot_live">Hot Live</string>
    <string name="contribution">Contribution</string>





    <string name="login_with_phone"> Log in with phone </string>
    <string name="login_means_you_agree_terms_of_use">Login means you agree Terms of use ,</string>

    <string name="broadcaster_agreemnet"> <u>Broadcaster Agreement</u> </string>
    <string name="and">  "&amp;"  </string>
    <string name="Privacy_Policy"> <u> privacy Policy</u></string>
    <string name="powered_by_wingo_live_com" >Powered by Wingo-live.com </string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete_your_profile_info">Complete your profile info</string>
    <string name="skip">Skip</string>
    <string name="click_to_change_or_delete_photo_drag_photo_to_change_order">click to change or delete photo,Drag photo to change order</string>
    <string name="add_video_profile">Add video profile</string>
    <string name="unlock_at_level_50">(Unlock at level 50)</string>
    <string name="name">Name</string>
    <string name="wingo_id">Wingo ID</string>
    <string name="gender">Gender</string>
    <string name="birth_day">Birth Day</string>
    <string name="bio">Bio</string>
    <string name="copy">copy</string>
    <string name="log_in">Log in</string>
    <string name="vip_statu">Vip statu :</string>
    <string name="king">King</string>
    <string name="duke">Duke</string>
    <string name="warrior">warrior</string>
    <string name="distinguished_profile_card">Distinguished Profile Card</string>
    <string name="vip_medal">VIP Medal</string>
    <string name="vip_bullet_screen">VIP Bullet Screen</string>
    <string name="entrance_effect">Entrance Effect</string>
    <string name="top_one_room_viewer">Top One Room Viewer</string>
    <string name="chat_bubbles_color">Chat Bubbles Color</string>
    <string name="profile_picture_decoration">Profile Picture Decoration</string>
    <string name="guest_fram">Guest Fram</string>
    <string name="speed_up_the_upgrading">Speed Up the upgrading</string>
    <string name="opening_month">opening month</string>
    <string name="renewal_cost">Renewal cost</string>
    <string name="renewal">Renewal</string>
    <string name="secured">Secured</string>
    <string name="connect">Connect</string>
    <string name="wings">Wings</string>
    <string name="_33_20_time_remaining_the_time_in_leaderboard_is_based_on_egypt_zone">33:20 Time remaining- the time in leaderboard is based on Egypt zone</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="official_customer_services">Official customer services</string>
    <string name="fans">Fans</string>
    <string name="following">Following</string>
    <string name="friends">Friends</string>
    <string name="wallet">Wallet</string>
    <string name="vip">VIP</string>
    <string name="store">Store</string>
    <string name="level">Level</string>
    <string name="baggage">Baggage</string>
    <string name="task">Task</string>
    <string name="settings">Settings</string>
    <string name="id">ID: </string>
    <string name="follow">Follow</string>
    <string name="chat">Chat</string>
    <string name="send">send</string>
    <string name="country">Country</string>
    <string name="scan_my_qr_code">Scan my QR code</string>
    <string name="all">All</string>
    <string name="gifts">Gifts</string>
    <string name="tools">Tools</string>
    <string name="recharge">Recharge</string>
    <string name="add_title_to_your_other_nworld_live">Add title to your other  world live</string>
    <string name="add_cover">Add cover</string>
    <string name="share_to">share to</string>
    <string name="go_live">Go LIVE</string>
    <string name="guest_list">Guest List</string>
    <string name="waiting_list">Waiting List</string>
    <string name="join">Join</string>
    <string name="write_a_comment">write a comment</string>
    <string name="name_of_user">Name of user</string>
    <string name="my_level">My Level</string>
    <string name="current_exp">current Exp</string>
    <string name="exp_to_next_level">Exp.to next level</string>
    <string name="notification">Notification</string>
    <string name="wingo_live_arab">Wingo live arab</string>
    <string name="ago">ago</string>
    <string name="manage">Manage</string>
    <string name="joined_the_live">:joined the LIVE</string>
    <string name="descripte_your_problem">Descripte your problem</string>
    <string name="fanss">Fans:</string>
    <string name="name_of_broadcast">Name of Broadcast</string>
    <string name="me">Me</string>
    <string name="top_fans_today">Top Fans Today</string>
    <string name="top_fans">Top fans</string>
    <string name="accept">Accept</string>
    <string name="recharge_history">Recharge history</string>
    <string name="go_follow">Go Follow</string>

    <string name="diamond_balance">Diamond balance</string>
    <string name="wingo_live_service_accounts">Wingo live service accounts</string>
</resources>
