<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civProfile"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/upload_pic" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/custom_white_container"
        android:elevation="@dimen/_2sdp"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColorHint="@color/gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/gender"
        android:textSize="@dimen/_14ssp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/etHomeAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/custom_white_container"
        android:elevation="@dimen/_2sdp"
        android:gravity="center_vertical"
        android:hint="@string/home_address"
        android:inputType="text"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColorHint="@color/gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/birth_date"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp">

        <EditText
            android:id="@+id/etDay"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_white_container"
            android:elevation="@dimen/_2sdp"
            android:gravity="center"
            android:hint="@string/dd"
            android:inputType="number"
            android:maxLength="2"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/etMonth"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_white_container"
            android:elevation="@dimen/_2sdp"
            android:gravity="center"
            android:hint="@string/mm"
            android:inputType="number"
            android:maxLength="2"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_white_container"
            android:elevation="@dimen/_2sdp"
            android:gravity="center"
            android:hint="@string/yy"
            android:inputType="number"
            android:maxLength="4"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColorHint="@color/gray" />
    </LinearLayout>

    <Button
        android:id="@+id/btDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:background="@drawable/gradient_login"
        android:text="@string/done"
        android:textColor="@color/appColorWhite" />
</LinearLayout>
