<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.toptrending.TopTrendingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerVertical="true"
            android:onClick="finish"
            app:srcCompat="@drawable/ic_action_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/top_trending_broadcast"
            android:textColor="@color/appColorBlack"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:onClick="skip"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/skip"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrending"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/done"
        android:textColor="@color/appColorWhite"
        android:background="@drawable/gradient_login"/>
</LinearLayout>
