<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_below="@id/tbSign"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_logo"/>
    <LinearLayout
        android:id="@+id/lSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPassStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="invisible"
                android:textColor="@color/strong"
                android:text="@string/strong"/>

            <EditText
                android:id="@+id/etCreatePass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingStart="@dimen/_8sdp"
                android:hint="@string/create_password"
                android:textColorHint="@color/gray"
                android:background="@drawable/custom_white_container"
                android:elevation="@dimen/_2sdp"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/appColorBlack"
                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:textSize="@dimen/_8ssp"
                android:text="@string/must_contain_at_least_one_lower_case_letter_one_upper_case_letter_one_digit_and_one_of_these_special_characters"/>

            <EditText
                android:id="@+id/etReCreatePass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingStart="@dimen/_8sdp"
                android:hint="@string/re_create_password"
                android:textColorHint="@color/gray"
                android:background="@drawable/custom_white_container"
                android:elevation="@dimen/_2sdp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <Button
            android:id="@+id/btSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@drawable/custom_inactive_container"
            android:text="@string/sign_up"
            android:textColor="@color/appColorWhite" />

    </LinearLayout>
</RelativeLayout>
