<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitecolor"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColorDarkerGray"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_list"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/blackcolor"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            />
    </LinearLayout>

<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:id="@+id/guest"
    android:layout_weight="1"
    android:layout_height="match_parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColorDarkerGray"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting_list"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/blackcolor"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/waiting_guest_recycler"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"

        >
    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:background="@drawable/purple_bg"
        android:text="@string/join"
        android:textColor="@color/whitecolor"
        android:id="@+id/Join_btn"
        android:textAllCaps="false"
        android:textSize="@dimen/_15ssp"
        />
</LinearLayout>